--- a/collapsing-drums/src/css/paymentEntry.css
+++ b/collapsing-drums/src/css/paymentEntry.css
@@ -1,39 +1,48 @@
-h2 {
-    text-align: center; /* Center the heading */
-    margin-bottom: 20px; /* Space below heading */
-    color: #333; /* Darker color for the heading */
+.text {
+    margin-bottom: 20px;
+    font-size: 46px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.form-container {
+    position: absolute;
+    top: 40%;
+    left: 50%; /* Move to the horizontal center */
+    transform: translate(-50%, -50%); /* Adjust to truly center it */
+    max-width: 600px;
+    margin-top: 100px;
+    padding: 40px;
+    background-color: #929292;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rba(0,0,0,0.1);
 }
 
 .payment-form {
     display: flex;
-    flex-direction: column; 
-    padding-left: 38%;
-    width: 100%;
-    max-width: 500px;
-    align-items: center;
+    flex-direction: column;
 }
 
 .form-group {
-    display: flex;
-    justify-content: space-between;
-    align-items: start;
     margin-bottom: 15px;
 }
 
 .form-group label {
-    flex: 2;
-    width: 100px;
-    padding-right: 20px;
+    margin-bottom: 5px;
+    color: white;
 }
 
 .form-group input {
     padding: 8px;
-    border: 1px solid #ccc;
+    border: 1px solid white;
+    font-size: 16px;
+    width: 50%;
     border-radius: 4px;
+    color: black;
 }
 
 input:focus {
-    border-color: #859c6a;; /* Change border color on focus */
+    border-color: #ffe088; /* Change border color on focus */
     outline: none; /* Remove default outline */
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); /* Subtle shadow on focus */
 }
