--- a/collapsing-drums/src/css/purchase.css
+++ b/collapsing-drums/src/css/purchase.css
@@ -2,29 +2,28 @@
 .purchase-form {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    align-items: start;
+    margin: 20px 20px 20px 20px;
 }
 
 /* Flexbox row to align products side by side in rows */
 .product-row {
     display: flex;
-    flex-wrap: wrap; /* Allows wrapping to the next line */
     justify-content: center;
-    gap: 20px; /* Space between product items */
+    gap: 50px; /* Space between product items */
 }
 
 /* Style for individual product */
 .product-item {
-    width: 30%; /* Each product takes 30% of the row to fit 3 items per row */
+    width: 50%; 
+    height: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 15px;
-    border: 1px solid #899878;
+    border: 1px solid #fff8e4de;
     border-radius: 10px;
-    background-color: #e8f5d9;
+    background-color: #d2d2d2;
     box-shadow: 0 2ps 5ps rgba(0,0,0,0.1);
     margin-bottom: 20px; /* Space between rows */
 }
