--- a/collapsing-drums/src/css/viewOrder.css
+++ b/collapsing-drums/src/css/viewOrder.css
@@ -8,15 +8,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border:1px solid #899878;
+    border:1px solid #ffe088;
     padding: 10px;
     margin: 5px 0;
+    color: white;
 }
 
 .view-name {
     flex: 1;
     text-align: left;
     padding-left: 20px;
+    color: white;
 }
 
 .view-image {
@@ -33,4 +35,8 @@
 .view-quantity {
     flex: 1;
     text-align: left;
+}
+
+.text {
+    color: white;
 }
