Updated the HomePage img

--- a/collapsing-drums/src/css/home.css
+++ b/collapsing-drums/src/css/home.css
@@ -1,6 +1,7 @@
 /* home.css */
 .home-container {
     height: 100vh;
+    width: 100%;
     background-size: cover;
     background-position: center;
     display: flex;
