--- a/collapsing-drums/src/css/header.css
+++ b/collapsing-drums/src/css/header.css
@@ -12,17 +12,15 @@
     width: auto;
 }
 
-h1 {
-    font-size: 50px;
-    margin: 0;
-    font-family: bradley hand, cursive;
-}
-
 .page{
     color: white;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
     padding-bottom: 20px;
-    width: 200px;
+    width: 10%;
+}
+
+h3{
+    font-size: 3vh;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .page:hover {
