--- a/collapsing-drums/src/css/site.css
+++ b/collapsing-drums/src/css/site.css
@@ -1,8 +1,8 @@
 .body{
-    background-color: #2a2e30;
+    background-color: black;
     font-family: Arial, sans-serif;
-    height: 100vh;
-    flex-direction: column;
+    min-height: 100vh;
+    overflow: hidden;
 }
 
 button {
