--- a/collapsing-drums/src/css/aboutPage.css
+++ b/collapsing-drums/src/css/aboutPage.css
@@ -27,7 +27,7 @@
 }
 
 h1 {
-    color: #ff908f;
+    color: #fbd65c;
     font-family: Garamond, serif;
     font-size: 4rem;
     margin-top: 40px;
@@ -45,14 +45,32 @@ h2 {
     background-color: #ff908f;
 }
 
+.strat{
+    margin-bottom: 50px;
+}
+
 .shopCol {
-    padding: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 10px;
 }
 
 .shopButton {
-    max-width: 20vw;
-    height: 20vh;
+    width: 80%;
+    height: 80%;
     border-radius: 10px;
+}
+
+.merch:hover {
+    content: url('../assets/Shop\ Merch\ Hover.png');
+}
+
+.ticket:hover {
+    content: url('../assets/Shop\ Tickets\ Hover.png');
+}
+
+.music:hover {
+    content: url('../assets/Stream\ Music\ Hover.png');
 }
 
 .bottombar {
@@ -121,6 +139,14 @@ p {
     h2 {
         font-size: 1.2rem;
     }
+    .shopCol {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .shopButton{
+        width: 100%;
+        height: 100%;
+    }
     .name {
         font-size: 1.4rem;
     }
@@ -129,10 +155,6 @@ p {
     }
     .exec{
         width: 100%;
-    }
-    .shopButton{
-        max-width: 80%;
-        height: auto;
     }
     .exec-header {
         width: 40%;
@@ -158,8 +180,8 @@ p {
         text-align: center;
     }
     .shopButton{
-        max-width: 50%;
-        height: auto;
+        width: 50%;
+        height: 80%;
     }
     .exec {
         display: flex;
