--- a/collapsing-drums/src/css/footer.css
+++ b/collapsing-drums/src/css/footer.css
@@ -1,9 +1,37 @@
+
+.col-md-2 {
+    padding-top: 20px;
+}
+
 .footer {
     position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100px;
+    bottom: 0;       /* Position it at the bottom */
+    left: 0;         /* Align it to the left */
+    background-color: black;
+    text-align: center;
+    padding: 10px 0px;
+    width: 100vw;
+    position: relative; /* Ensure it respects the layout */
+    box-shadow: 0 -4px 8px -2px rgba(255,255,255, .4); 
+}
+
+h3.footerText {
+    color: rgb(99, 99, 99);
+    font-family: Garamond, serif;
+    text-align: center;
+    font-weight:lighter;
+    font-size: 1.2rem;
+}
+
+h4.footerText {
+    color: rgb(99, 99, 99);
+    font-family: Garamond, serif;
+    text-align: center;
+    font-weight:lighter;
+    font-size: 1rem;
+}
+
+h4.footerText:hover {
     color: white;
-    display: flex;
+    transition: color 0.3s ease;
 }
