--- a/collapsing-drums/src/css/viewConfirmation.css
+++ b/collapsing-drums/src/css/viewConfirmation.css
@@ -1,13 +1,26 @@
+.confirm-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 20px;
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
 .confirm-box {
-    position: absolute;
-    top: 30%;
-    left: 50%; /* Move to the horizontal center */
-    transform: translate(-50%, -50%); /* Adjust to truly center it */
-    max-width: 600px;
-    margin-top: 100px;
-    padding: 40px;
+    width: 600px;
+    padding: 20px;
     background-color: #929292;
     color: white;
     border-radius: 10px;
-    box-shadow: 0 2px 10px rba(0,0,0,0.1);
+}
+
+text {
+    margin-bottom: 20px;
+    font-size: 2.5rem; /* Use rem for better scaling */
+    font-weight: bold;
+    text-align: center;
 }
