--- a/collapsing-drums/src/css/viewOrder.css
+++ b/collapsing-drums/src/css/viewOrder.css
@@ -1,3 +1,9 @@
+.cart-container {
+    flex-direction: column;
+    display: flex;
+    margin: 70px 20px 70px 20px;
+}
+
 .cart-items {
     display: flex;
     flex-direction: column;
@@ -8,7 +14,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border:1px solid #ffe088;
+    border: 1px solid rgba(255,255,255, .4);
+    border-radius: 10px;
     padding: 10px;
     margin: 5px 0;
     color: white;
@@ -39,4 +46,9 @@
 
 .text {
     color: white;
+}
+
+.checkoutbutton {
+    width: 40%;
+    height: auto;
 }
