--- a/collapsing-drums/src/css/merch.css
+++ b/collapsing-drums/src/css/merch.css
@@ -19,9 +19,9 @@
 
 /* Style for individual product */
 .product-item {
-    flex: 1 1 200px; /* Allow items to grow, shrink, and set a base width */
-    max-width: 200px; /* Set maximum width for product items */
-    height: auto; /* Allow height to auto adjust based on content */
+    flex: 1 1 200px; 
+    max-width: 200px;
+    height: auto; 
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,8 +29,8 @@
     border: 1px solid #fff8e4de;
     border-radius: 10px;
     background-color: white;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px; /* Space between rows */
+    box-shadow: 0px 0px 3px 3px #ff908f;
+    margin-bottom: 20px;
 }
 
 p {
@@ -45,11 +45,10 @@ input {
 
 /* Ensure image is responsive and smaller */
 .product-image {
-    width: 100px; /* Image width */
-    height: 100px; /* Image height */
+    height: 150px;
+    width: auto;
     object-fit: cover; /* Keep aspect ratio */
     margin-bottom: 10px;
-    border-radius: 10px;
 }
 
 .product-item p {
