--- a/collapsing-drums/src/css/home.css
+++ b/collapsing-drums/src/css/home.css
@@ -11,7 +11,7 @@ html, body {
     justify-content: flex-start;
     align-items: center;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 } 
 
 .home-content {
@@ -19,11 +19,9 @@ html, body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
     position: relative;
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
 }
 
 /* Mobile styles */
@@ -32,10 +30,3 @@ html, body {
         background-image: url('../assets/MobileHomePage.png');
     }
 }
-
-/* Ensure header and footer don't block the background */
-/* .header, .footer {
-    background-color: transparent;
-    position: relative;
-    z-index: 2;
-} */
